modifications to retrieve some sensor data from Continental project